@@ -109,18 +109,18 @@ exports.init = function (cli) {
   storage.command('create <name>')
     .description('Creates a storage account')
     .option('-s, --subscription <id>', 'use the subscription id')
-    .option('--label <label>', 'The label')
-    .option('--accountDescription <accountDescription>', 'The description')
-    .option('--location <location>', 'The location')
-    .option('--affinityGroup <affinityGroup>', 'The affinity group')
+    .option('-e, --label <label>', 'storage account label')
+    .option('-d, --description <description>', 'storage account description')
+    .option('-l, --location <name>', 'location of the data center')
+    .option('-a, --affinity-group <name>', 'affinity group')
     .execute(function (name, options, callback) {
       var channel = utils.createServiceManagementService(cli.category('account').lookupSubscriptionId(options.subscription),
           cli.category('account'), log);
 
       var storageOptions = {
         Location: options.location,
-        AffinityGroup: options.AffinityGroup,
-        Description: options.accountDescription,
+        AffinityGroup: options.affinityGroup,
+        Description: options.description,
         Label: options.label
       };
 
@@ -135,15 +135,15 @@ exports.init = function (cli) {
   storage.command('update <name>')
     .description('Updates a storage account')
     .option('-s, --subscription <id>', 'use the subscription id')
-    .option('--label <label>', 'The label')
-    .option('--accountDescription <accountDescription>', 'The description')
+    .option('-e, --label <label>', 'storage account label')
+    .option('-d, --description <description>', 'storage account description')
     .option('--geoReplicationEnabled <geoReplicationEnabled>', 'Indicates if the geo replication is enabled')
     .execute(function (name, options, callback) {
       var channel = utils.createServiceManagementService(cli.category('account').lookupSubscriptionId(options.subscription),
           cli.category('account'), log);
 
       var storageOptions = {
-        Description: options.accountDescription,
+        Description: options.description,
         Label: options.label,
         GeoReplicationEnabled: options.geoReplicationEnabled
       };
