@@ -1,3 +1,5 @@
+* Changed the option names to --description and --affinity-group on the storage command
+
 2012.12.22 - Version 0.6.10
 * Fix require issue with unix based systems
 * Fix issue with deployment scripts
